# sip-sage-ai-simple

./: next.config.js  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vercel 3.json  vercel.json
app/: globals.css  layout.tsx  page.tsx
app/recommendations/: page.tsx
apps/backend/: alembic.ini  pyproject.toml  requirements.txt
apps/backend/migrations/: env.py
apps/backend/src/: main.py
apps/backend/src/db/: session.py
backend/: main.py
backend/src/: main.py
backend/src/core/: config.py
backend/src/db/models/: __init__.py  tenant.py
backend/src/services/: recommendation_service.py
