[project]
name = "oregon-wine-host-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "alembic>=1.16.5",
    "anthropic>=0.88.0",
    "asyncpg>=0.31.0",
    "celery>=5.6.3",
    "fastapi>=0.128.8",
    "groq>=1.0.0",
    "llama-index>=0.14.16",
    "llama-index-embeddings-huggingface>=0.6.1",
    "llama-index-llms-anthropic>=0.10.11",
    "llama-index-llms-groq>=0.4.1",
    "llama-index-vector-stores-pinecone>=0.7.1",
    "pinecone-client>=6.0.0",
    "psycopg2-binary>=2.9.11",
    "pydantic-settings>=2.11.0",
    "python-dotenv>=1.2.1",
    "redis>=7.0.1",
    "ruff>=0.15.8",
    "sqlalchemy[asyncio]>=2.0.48",
    "uvicorn>=0.39.0",
]
